Add Obstacle Type Class

--- a/Workspace/catkin_ws/src/navigation/hunter_move_base/CMakeLists.txt
+++ b/Workspace/catkin_ws/src/navigation/hunter_move_base/CMakeLists.txt
@@ -49,6 +49,9 @@ include_directories(
 # hunter_move_base
 add_library(hunter_move_base
   src/hunter_move_base.cpp
+  src/Obstacle_Point.cpp
+  src/Obstacle_Line.cpp
+  src/Obstacle_Polygon.cpp
 )
 target_link_libraries(hunter_move_base
     ${Boost_LIBRARIES}
