--- a/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
+++ b/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
@@ -61,9 +61,22 @@ TebLocalPlannerROS:
  dynamic_obstacle_inflation_dist: 0.6
  include_dynamic_obstacles: True 
 
- costmap_converter_plugin: ""
+ costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
+
+ costmap_converter/CostmapToPolygonsDBSMCCH:
+  cluster_max_distance: 0.4
+  cluster_min_pts: 2
+  cluster_max_pts: 30
+  convex_hull_min_pt_separation: 0.1
+
+ # ransac_inlier_distance: 0.15
+ # ransac_min_inliers: 10
+ # ransac_no_iterations: 1500
+ # ransac_remainig_outliers: 3
+ # ransac_convert_outlier_pts: True
+ # ransac_filter_remaining_outlier_pts: False
 
  # Optimization
     
