--- a/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
+++ b/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
@@ -10,7 +10,7 @@ TebLocalPlannerROS:
  max_samples: 500
  global_plan_overwrite_orientation: False
  allow_init_with_backwards_motion: True
- max_global_plan_lookahead_dist: 5.0
+ max_global_plan_lookahead_dist: 2.0 #5.0
  global_plan_viapoint_sep: -1
  global_plan_prune_distance: 1
  exact_arc_length: False
@@ -61,15 +61,16 @@ TebLocalPlannerROS:
  dynamic_obstacle_inflation_dist: 0.6
  include_dynamic_obstacles: True 
 
- costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
+ #costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
+ costmap_converter_plugin: ""
+ #costmap_converter_spin_thread: True
+ #costmap_converter_rate: 5
 
- costmap_converter/CostmapToPolygonsDBSMCCH:
-  cluster_max_distance: 0.3
-  cluster_min_pts: 5
-  cluster_max_pts: 80
-  convex_hull_min_pt_separation: 0.1
+ #costmap_converter/CostmapToPolygonsDBSMCCH:
+ # cluster_max_distance: 0.3
+ # cluster_min_pts: 5
+ # cluster_max_pts: 80
+ # convex_hull_min_pt_separation: 0.1
 
  # ransac_inlier_distance: 0.15
  # ransac_min_inliers: 10
