3rd Modification for wrp_sdk CMakeLists.txt files

--- a/Workspace/ros2_ws/src/wrp_sdk/CMakeLists.txt
+++ b/Workspace/ros2_ws/src/wrp_sdk/CMakeLists.txt
@@ -110,8 +110,8 @@ include(GNUInstallDirs)
 ## Add catkin install targets
 install(TARGETS ${PROJECT_NAME}
   RUNTIME DESTINATION lib/${PROJECT_NAME}
-  LIBRARY DESTINATION lib/${PROJECT_NAME}
-  ARCHIVE DESTINATION lib/${PROJECT_NAME})
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib)
 
 # install(DIRECTORY include/${PROJECT_NAME}/
 #   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
