--- a/Workspace/ros2_ws/.vscode/settings.json
+++ b/Workspace/ros2_ws/.vscode/settings.json
@@ -4,5 +4,8 @@
     ],
     "files.associations": {
         "random": "cpp"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ]
 }
