--- a/Workspace/ros2_ws/src/hunter_ros/hunter_msgs/package.xml
+++ b/Workspace/ros2_ws/src/hunter_ros/hunter_msgs/package.xml
@@ -53,6 +53,10 @@
   <depend>message_generation</depend>
   <depend>std_msgs</depend>
   <depend>message_runtime</depend>
+  
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
