--- a/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/costmap_common_params.yaml
+++ b/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/costmap_common_params.yaml
@@ -7,25 +7,25 @@ footprint: [[-0.15, -0.38], [-0.15, 0.38], [0.85, 0.38], [0.85, -0.38]]
 transform_tolerance: 0.2
 map_type: costmap
 
-obstacle_layer:
-  enabled: true
-  obstacle_range: 3.0
-  raytrace_range: 3.5
-  inflation_radius: 0.2
-  track_unknown_space: false
-  combination_method: 1
+#obstacle_layer:
+#  enabled: true
+#  obstacle_range: 2.8 #3.0
+#  raytrace_range: 3.5
+#  inflation_radius: 0.2
+#  track_unknown_space: false
+#  combination_method: 1
 
-  # observation_sources: laser_scan_sensor
-  # laser_scan_sensor:
-  #   { data_type: LaserScan, topic: scan, marking: true, clearing: true }
-  observation_sources: rslidar_sensor
-  rslidar_sensor:
-    { data_type: PointCloud2, topic: points2, marking: true, clearing: true }
+#   observation_sources: laser_scan_sensor
+#   laser_scan_sensor:
+#     { data_type: LaserScan, topic: scan, marking: true, clearing: true }
+#  observation_sources: rslidar_sensor
+#  rslidar_sensor:
+#    { data_type: PointCloud2, topic: points2, marking: true, clearing: true }
 
-inflation_layer:
-  enabled: true
-  cost_scaling_factor: 10.0 # exponential rate at which the obstacle cost drops off (default: 10)
-  inflation_radius: 0.5 # max. distance from an obstacle at which costs are incurred for planning paths.
+#inflation_layer:
+#  enabled: true
+#  cost_scaling_factor: 10.0 # exponential rate at which the obstacle cost drops off (default: 10)
+#  inflation_radius: 0.5 # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
   enabled: true
