--- a/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
+++ b/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/hunter_local_planner_params.yaml
@@ -45,21 +45,21 @@ TebLocalPlannerROS:
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2 #0.2
- yaw_goal_tolerance: 0.3 #0.3
+ xy_goal_tolerance: 0.3 #0.2
+ yaw_goal_tolerance: 0.6 #0.3
  free_goal_vel: False
  complete_global_plan: True
     
  # Obstacles
     
- min_obstacle_dist: 0.4 # This value must also include our robot's expansion, since footprint_model is set to "line".
- inflation_dist: 0.6
+ min_obstacle_dist: 0.1 # 0.4 This value must also include our robot's expansion, since footprint_model is set to "line".
+ inflation_dist: 0.1 #0.6
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 15
 
- dynamic_obstacle_inflation_dist: 0.6
- include_dynamic_obstacles: True 
+ dynamic_obstacle_inflation_dist: 0.1 #0.6
+ include_dynamic_obstacles: True #True
 
  #costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
  costmap_converter_plugin: ""
