--- a/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/local_costmap_params.yaml
+++ b/Workspace/catkin_ws/src/hunter_nav/hunter_navigation/cfg/local_costmap_params.yaml
@@ -10,6 +10,22 @@ local_costmap:
   resolution: 0.1
   transform_tolerance: 0.5
   
+  obstacle_layer:
+    enabled: true
+    obstacle_range: 2.8 #3.0
+    raytrace_range: 3.5
+    inflation_radius: 0.2
+    track_unknown_space: false
+    combination_method: 1
+
+#   observation_sources: laser_scan_sensor
+#   laser_scan_sensor:
+#     { data_type: LaserScan, topic: scan, marking: true, clearing: true }
+    observation_sources: rslidar_sensor
+    rslidar_sensor:
+      { data_type: PointCloud2, topic: points2, marking: true, clearing: true }
+
+
   plugins:
    - {name: static_layer,        type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
